force-app/main/default/objects/Contratista__c/Contratista__c.object-meta.xml
<CustomObject>
    <label>Contratista</label>
    <nameField>
        <label>Nombre de Contratista</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contratistas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>