force-app/main/default/objects/Contratista__c/fields/Afianzadora__c.field-meta.xml
<CustomField>
    <fullName>Afianzadora__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Afianzadora</label>
    <referenceTo>Afianzadora__c</referenceTo>
    <relationshipLabel>Contratistas</relationshipLabel>
    <relationshipName>Contratistas</relationshipName>
    <type>Lookup</type>
</CustomField>