force-app/main/default/objects/Contratista__c/fields/Cliente__c.field-meta.xml
<CustomField>
    <fullName>Cliente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contratistas</relationshipLabel>
    <relationshipName>Contratistas</relationshipName>
    <type>Lookup</type>
</CustomField>