force-app/main/default/objects/Contratista__c/fields/Contrato__c.field-meta.xml
<CustomField>
    <fullName>Contrato__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contrato</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Contratistas</relationshipLabel>
    <relationshipName>Contratistas</relationshipName>
    <type>Lookup</type>
</CustomField>