force-app/main/default/objects/Contratista__c/fields/Fianza__c.field-meta.xml
<CustomField>
    <fullName>Fianza__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fianza</label>
    <referenceTo>Fianza__c</referenceTo>
    <relationshipLabel>Contratistas</relationshipLabel>
    <relationshipName>Contratistas</relationshipName>
    <type>Lookup</type>
</CustomField>